# allium-tools

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  allium.config.json  eslint.config.mjs  package-lock.json  package.json
.github/workflows/: ci.yml  release-artifacts.yml
crates/allium/: Cargo.toml
crates/allium-cli/: Cargo.toml
crates/allium-cli/src/: main.rs
crates/allium-parser/: Cargo.toml
crates/allium-parser/src/: analysis.rs  ast.rs  diagnostic.rs  lexer.rs  lib.rs  (+2 more)
crates/allium-wasm/: Cargo.toml
crates/allium-wasm/src/: lib.rs
crates/allium/src/: domain_model.rs  generators.rs  main.rs  test_plan.rs
crates/allium/tests/: ambiguous_imports.rs  cli_help.rs  cross_module_unused.rs
docs/: allium-v1-language-reference.md  allium-v1-patterns-reference.md  allium-v2-language-reference.md  allium-v3-language-reference.md  parser-changes-alp14-16.md  parser-changes-v2.md  releasing.md  versioning.md
docs/editors/: emacs.md  neovim.md  other-editors.md  vscode.md
docs/project/: architecture.md  parser-roadmap.md  plan.md  rust-checker-parity.md  scaffold-frameworks.md
extensions/allium/: README.md  package.json
scripts/: build-bottle.sh  build-emacs-treesit-grammar.sh  build-release-artifacts.sh  emacs-test-bootstrap.el  emacs-test-install.el  release.sh  run-emacs-demo.sh  run-emacs-integration-tests.sh  run-emacs-test-install.sh  run-emacs-tests.sh  run-neovim-demo.sh  run-neovim-integration-tests.sh  run-neovim-test-install.sh  run-neovim-tests.sh  update-homebrew-formula.sh  version-bump.sh
(+69 files in other folders)
