[package]
name = "allium-wasm"
description = "WASM bindings for the Allium parser"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
allium-parser = { path = "../allium-parser" }
serde_json = "1"
wasm-bindgen = "0.2"
