[package]
name = "allium-cli"
description = "CLI for checking Allium specification files"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "allium"
path = "src/main.rs"

[dependencies]
allium-parser = { path = "../allium-parser", version = "2.0.0" }
serde_json = "1"
